--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
           no_output_timeout: 20m
           command: |
             cd ~
+            sudo apt-get purge openjdk-8-jdk openjdk-8-jre openjdk-11-jdk openjdk-11-jre -y
+            sudo apt-get install openjdk-8-jdk openjdk-8-jre -y
             mkdir twrp && cd twrp
             repo init --depth=1 -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-8.0
             repo sync -j$(nproc --all)
