--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
             source build/envsetup.sh
             add_lunch_combo omni_j4ltejx-eng
             add_lunch_combo omni_j4ltejx-userdebug
+            export ALLOW_MISSING_DEPENDENCIES=true
             lunch omni_j4ltejx-userdebug
             mka recoveryimage
 
