tree: Initial SHRP changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  TWRP-j4lte:
+  SHRP-j4lte:
    docker:
       - image: hendramanu/docker-build:build-advanced
    steps:
@@ -9,17 +9,17 @@ jobs:
           no_output_timeout: 20m
           command: |
             cd ~
-            mkdir twrp && cd twrp
-            repo init --depth=1 -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-8.1
+            mkdir shrp && cd shrp
+            repo init --depth=1 -u https://github.com/SKYHAWK-Recovery-Project/platform_manifest_twrp_omni -b android-9.0
             repo sync -j$(nproc --all)
             mkdir -p device/samsung && cd device/samsung
-            git clone https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME j4lte
+            git clone https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME j4lte -b shrp
 
       - run:
           name: Building
           no_output_timeout: 15m
           command: |
-            cd ~/twrp
+            cd ~/shrp
             source build/envsetup.sh
             add_lunch_combo omni_j4lte-eng
             add_lunch_combo omni_j4lte-userdebug
@@ -30,8 +30,8 @@ jobs:
       - run:
           name: Send To Telegram
           command: |
-            cd ~/twrp/out/target/product/j4lte
-            ZIPNAME="TWRP-$(date +%d_%m_%Y_%H_%M)-j4ltejx.zip"
+            cd ~/shrp/out/target/product/j4lte
+            ZIPNAME="SHRP-$(date +%d_%m_%Y_%H_%M)-j4lte.zip"
             sudo zip -r9 $ZIPNAME recovery.img
             curl -F chat_id=$CHAT_ID -F document=@$ZIPNAME -F parse_mode=markdown https://api.telegram.org/bot$BOT_TOKEN/sendDocument
 
@@ -39,4 +39,4 @@ workflows:
   version: 2.1
   cooking:
     jobs:
-      - TWRP-j4lte
+      - SHRP-j4lte
