--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs:
           name: Send To Telegram
           command: |
             cd ~/shrp/out/target/product/j4lte
-            ZIPNAME="SHRP-$(date +%d_%m_%Y_%H_%M)-j4lte.zip"
-            sudo zip -r9 $ZIPNAME recovery.img
+            ZIPNAME="*.zip"
+            # sudo zip -r9 $ZIPNAME recovery.img
             curl -F chat_id=$CHAT_ID -F document=@$ZIPNAME -F parse_mode=markdown https://api.telegram.org/bot$BOT_TOKEN/sendDocument
 
 workflows:
