--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,9 @@ jobs:
       - run:
           name: Send To Telegram
           command: |
-            cd ~/shrp/out/target/product/j4lte
-            ZIPNAME="*.zip"
-            # sudo zip -r9 $ZIPNAME recovery.img
-            curl -F chat_id=$CHAT_ID -F document=@$ZIPNAME -F parse_mode=markdown https://api.telegram.org/bot$BOT_TOKEN/sendDocument
+            for zipname_tg in ~/shrp/out/target/product/j4lte/*.zip ; do
+            curl -F chat_id=$CHAT_ID -F document=@$zipname_tg -F parse_mode=markdown https://api.telegram.org/bot$BOT_TOKEN/sendDocument
+            done
 
 workflows:
   version: 2.1
