--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  TWRP-j4lte:
+  TWRP-j4ltejx:
    docker:
       - image: hendramanu/docker-build:build-advanced
    steps:
@@ -13,7 +13,7 @@ jobs:
             repo init --depth=1 -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-8.1
             repo sync -j$(nproc --all)
             mkdir -p device/samsung && cd device/samsung
-            git clone https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME j4lte
+            git clone https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME j4ltejx
 
       - run:
           name: Building
@@ -21,16 +21,16 @@ jobs:
           command: |
             cd ~/twrp
             source build/envsetup.sh
-            add_lunch_combo omni_j4lte-eng
-            add_lunch_combo omni_j4lte-userdebug
+            add_lunch_combo omni_j4ltejx-eng
+            add_lunch_combo omni_j4ltejx-userdebug
             export ALLOW_MISSING_DEPENDENCIES=true
-            lunch omni_j4lte-eng
+            lunch omni_j4ltejx-eng
             mka recoveryimage
 
       - run:
           name: Send To Telegram
           command: |
-            cd ~/twrp/out/target/product/j4lte
+            cd ~/twrp/out/target/product/j4ltejx
             ZIPNAME="TWRP-$(date +%d_%m_%Y_%H_%M)-j4ltejx.zip"
             sudo zip -r9 $ZIPNAME recovery.img
             curl -F chat_id=$CHAT_ID -F document=@$ZIPNAME -F parse_mode=markdown https://api.telegram.org/bot$BOT_TOKEN/sendDocument
@@ -39,4 +39,4 @@ workflows:
   version: 2.1
   cooking:
     jobs:
-      - TWRP-j4lte
+      - TWRP-j4ltejx
