--- a/recovery/root/ueventd.samsungexynos7570.rc
+++ b/recovery/root/ueventd.samsungexynos7570.rc
@@ -48,9 +48,9 @@
 /dev/video31              0660   media      graphics
 
 # mscalers
-/dev/video50              0660   mediacodec      drmrpc
+/dev/video50              0660   media      graphics
 /dev/video51              0660   media      graphics
-/dev/m2m1shot_scaler0     0660   mediacodec drmrpc
+/dev/m2m1shot_scaler0     0660   cameraserver m2mscaler
 /dev/m2m1shot_scaler1     0660   media      graphics
 
 /dev/video55              0666   system     graphics
@@ -103,21 +103,18 @@
 /dev/seiren               0660   system     audio
 
 # MobiCore
-/dev/mobicore             0600   drmrpc     drmrpc
-/dev/mobicore-user        0666   drm        drmrpc
+#/dev/mobicore             0600   drmrpc     drmrpc
+#/dev/mobicore-user        0666   drm        drmrpc
 
 # Secure MEM driver
-/dev/s5p-smem             0660   drm        drmrpc
+#/dev/s5p-smem             0660   drm        drmrpc
 
 # cbd modem block
 /dev/block/mmcblk0p5     0400  radio   system
 
-# Modem Interface
-/dev/block/platform/13540000.dwmmc0/by-name/RADIO	0660   system     radio
-/dev/block/platform/13540000.dwmmc0/by-name/CP_DEBUG   0660	radio	system
-/dev/umts*                0660   system     radio
-/dev/umts_csd             0660   system     loop_radio
-/dev/smd4                 0660   system     radio
+# for DM tools
+/dev/umts_dm0             0660   radio      radio
+/dev/umts_router          0660   radio      radio
 
 # SIPC RIL
 /dev/umts_boot0           0660   radio      radio
@@ -125,23 +122,35 @@
 # /dev/umts_ipc1            0660   radio      radio
 /dev/umts_rfs0            0660   radio      radio
 
+# Modem Interface
+/dev/block/platform/13540000.dwmmc0/by-name/RADIO	    0660	system	radio
+/dev/block/platform/13540000.dwmmc0/by-name/CP_DEBUG	0660	radio	system
+/dev/umts*		          0660	 system	    radio
+/dev/umts_csd		      0660	 system	    loop_radio
+/dev/smd4                 0660   system     radio
+/dev/umts_ciq0            0660   system     bridge_rw
+
 # SCSC Bluetooth
 /dev/scsc_h4_0            0660   bluetooth  bluetooth
 
-#SCSC WLAN
-/dev/mx_0_r4_gdb          0660   wifi       wifi
-/dev/mx_0_m4_gdb          0660   wifi       wifi
-/dev/mx_0_mmap            0660   wifi       wifi
-/dev/mx_client_test_0     0660   wifi       wifi
-/dev/mx_0_debug_sampler   0660   wifi       wifi
-/dev/mx140_usb_clk_test_0 0660   wifi       wifi
-/dev/scsc_log_collector_0 0660   wifi       wifi
+# interactive governor parameters
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/timer_rate                  0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/timer_slack                 0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/min_sample_time             0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/hispeed_freq                0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/target_loads                0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/go_hispeed_load             0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/above_hispeed_delay         0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boost                       0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boostpulse                  0200    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/input_boost                 0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boostpulse_duration         0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/io_is_busy                  0660    system  system
 
-# Google FRP solution
-/dev/block/platform/13540000.dwmmc0/by-name/PERSISTENT    0660    system    system
-
-# Reactivation Lock
-/dev/block/platform/13540000.dwmmc0/by-name/STEADY    0660    system    system
+# sensor sysfs properties
+/sys/devices/virtual/input/input*    poll_delay    0660    system    radio
+/sys/devices/virtual/input/input*    enable        0660    system    radio
+/dev/input/event*	  0660   system		input
 
 # TEEGRIS
 /dev/tzdev		0660	system		system
@@ -151,7 +160,13 @@
 /dev/tz_shmem_validator	0666    system		system
 /dev/tz_wormhole   	0666    system		system
 
-# Sensor
-/dev/input/event* 0660 system input
-/sys/devices/virtual/input/input*   enable      0660  system   input
-/sys/devices/virtual/input/input*   poll_delay  0660  system   input
+# Google FRP solution
+/dev/block/platform/13540000.dwmmc0/by-name/PERSISTENT    0660    system    system
+
+# SCSC WLAN
+/dev/mx_0_r4_gdb   0660  system     system
+/dev/mx_0_m4_gdb   0660  system     system
+/dev/mx_0_mmap    0660   system     system
+/dev/mx_client_test_0     0660   system     system
+/dev/mx_0_debug_sampler   0660   system     system
+/dev/mx140_usb_clk_test_0 0660   system     system
